--- a/SwiftyLayoutsExample/Podfile
+++ b/SwiftyLayoutsExample/Podfile
@@ -10,7 +10,7 @@ project ‘SwiftyLayoutsExample’, {
 
 def applibs
 
-pod ‘SwiftyLayouts', :configuration => ['Debug'], :path  => '../SwiftyLayouts'
+pod ‘SwiftyLayouts', :configuration => ['Debug'], :path  => '../SwiftyLayouts/SwiftyLayouts-Debug.podspec'
 # pod 'MyDevLibrary-Release', :configuration => ['Release'], :path  => 'SwiftyLayoutsExample/Frameworks/MyDevLibrary/Release/MyDevLibrary-Release.podspec'
 
 end
@@ -24,8 +24,6 @@ target 'SwiftyLayoutsExample' do
     project 'SwiftyLayoutsExample.xcodeproj'
     applibs
 #    pod 'Alamofire', '~> 4.5'
-#   pod 'CocoaLumberjack', '~> 2.3.0'
-# pod 'LaunchDarkly', '~> 2.1.1'
   # Pods for SwiftyLayoutsExample
 
   target 'SwiftyLayoutsExampleTests' do
