--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: objective-c
 osx_image: xcode9.1
-xcode_project: SwiftyLayouts.xcodeproj
-xcode_scheme: SwiftyLayouts
-xcode_sdk: iphonesimulator8
+xcode_project: SwiftyLayouts/SwiftyLayouts.xcodeproj
+xcode_scheme: SwiftyLayoutsTests
+xcode_sdk: iphonesimulator
 
 branches:
 only:
@@ -11,12 +11,14 @@ env:
 global:
 - LC_CTYPE=en_US.UTF-8
 - LANG=en_US.UTF-8
-- PROJECT_NAME=SwiftyLayouts.xcodeproj
-- IOS_FRAMEWORK_SCHEME="SwiftyLayouts"
+- PROJECT_NAME=SwiftyLayouts/SwiftyLayouts.xcodeproj
+- IOS_FRAMEWORK_SCHEME=SwiftyLayoutsTests
 
 matrix:
-#- DESTINATION="OS=11.1,name=iPhone X"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
-- DESTINATION="OS=11.2,name=iPhone 8 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
+- DESTINATION='OS=11.2,platform=iOS Simulator,name=iPhone 8'
+SCHEME="$IOS_FRAMEWORK_SCHEME"
+RUN_TESTS="YES"
+POD_LINT="NO"
 
 before_install:
 - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
@@ -27,9 +29,9 @@ script:
 
 # Build Framework in Debug and Run Tests if specified
 - if [ $RUN_TESTS == "YES" ]; then
-xcodebuild -target "$PROJECT_NAME" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
+xcodebuild test -project "$PROJECT_NAME" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES | xcpretty;
 else
-xcodebuild -target "$PROJECT_NAME" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
+xcodebuild build -project "$PROJECT_NAME" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO | xcpretty;
 fi
 
 # Run `pod lib lint` if specified
