--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,10 @@
 os: osx
 language: objective-c
 osx_image: xcode9.2
-#xcode_project: SwiftyLayouts/SwiftyLayouts.xcodeproj
-#xcode_scheme: SwiftyLayoutsTests
-#xcode_sdk: iphonesimulator11.2
+xcode_project: SwiftyLayouts/SwiftyLayouts.xcodeproj
+xcode_scheme: SwiftyLayoutsTests
+xcode_sdk: iphonesimulator11.2
 
 branches:
 only:
 - master
-env:
-global:
-- LC_CTYPE=en_US.UTF-8
-- LANG=en_US.UTF-8
-- PROJECT_NAME=SwiftyLayouts/SwiftyLayouts.xcodeproj
-- IOS_FRAMEWORK_SCHEME=SwiftyLayoutsTests
-
-matrix:
-- DESTINATION=OS=11.2,platform=iOS Simulator,name=iPhone 8
-SCHEME="$IOS_FRAMEWORK_SCHEME"
-RUN_TESTS="YES"
-POD_LINT="NO"
-
-before_install:
-- rvm install ruby-2.2.2
-- gem install xcpretty -N
-script:
-- set -o pipefail
-- xcodebuild -version
-- xcodebuild -showsdks
-
-# Build Framework in Debug and Run Tests if specified
-- if [ $RUN_TESTS == "YES" ]; then
-xcodebuild test -project "$PROJECT_NAME" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES | xcpretty;
-else
-xcodebuild build -project "$PROJECT_NAME" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO | xcpretty;
-fi
-
-# Run `pod lib lint` if specified
-- if [ $POD_LINT == "YES" ]; then
-pod lib lint;
-fi
-
